--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -198,10 +198,10 @@ $primary-color: #008CBA;
 // $list-line-height: $paragraph-line-height;
 // $list-margin-bottom: $paragraph-margin-bottom;
 // $list-style-position: outside;
-// $list-side-margin: 1.1rem;
-// $list-ordered-side-margin: 1.4rem;
+$list-side-margin: 0;
+$list-ordered-side-margin: 0;
 // $list-side-margin-no-bullet: 0;
-// $list-nested-margin: rem-calc(20);
+$list-nested-margin: 0;
 // $definition-list-header-weight: $font-weight-bold;
 // $definition-list-header-margin-bottom: .3rem;
 // $definition-list-margin-bottom: rem-calc(12);
@@ -1109,7 +1109,7 @@ $sub-nav-active-cursor: default;
 
 // Tables
 
-// $include-html-table-classes: $include-html-classes;
+$include-html-table-classes: false;
 
 // These control the background color for the table and even rows
 // $table-bg: #fff;
