--- a/webroot/scss/defs.scss
+++ b/webroot/scss/defs.scss
@@ -42,7 +42,7 @@
 $button-font-family: "Helvetica Neue Condensed Black";
 $user-activity-panel-font-size: rem-calc(21px);
 //-------------------------------------------------------------------------------------------------------------TEMPLATES
-$topnav-height: rem-calc(90);
+$topnav-height: rem-calc(65px);
 $topnav-h1-padding: 0 0 0 0;
 $topnav-h1-margin: (0.9*$topnav-height - $h1-font-size)/2 rem-calc(10px) 0 rem-calc(10px);
 $topnav-h1-height: $topnav-height - $topnav-h1-padding - $topnav-h1-margin;
@@ -58,12 +58,29 @@ $big-radius: 16px;
 
 
 /*   MENU   */
+$float-pane-margin: rem-calc(20px);
+$float-pane-border-width: rem-calc(8px);
+$user-activity-panel-height: rem-calc(100);
+$user-activity-panel-width: rem-calc(100);
 $orbcat-border-width: 1px;
 $orbcat-border-factor: 10%;
 $orbcat-border-factor-2: 15%;
+$orbcat-menu-width: rem-calc(800px);
+$orbcat-menu-height: rem-calc(380px);
+$orbcat-menu-item-height: rem-calc(100px);
+$orbcat-menu-title-font-size: rem-calc(60px);
 $orb-card-stage-height: rem-calc(360px); // todo: media queries yo
-$orb-card-stage-width: rem-calc(1000px);
+$orb-card-wrapper-width: rem-calc(1200px);
+$min-orb-list-width: rem-calc(350px);
+$orb-card-stage-width: $orb-card-wrapper-width - $min-orb-list-width;
 $orb-card-height: rem-calc(320px);
 $orb-card-width: rem-calc(600px);
-$user-activity-panel-height: rem-calc(100);
-$user-activity-panel-width: rem-calc(100);
+$orb-card-padding: rem-calc(10px);
+$orb-card-inner-width: $orb-card-width - (2 * $orb-card-padding);
+$orb-card-margin-left: 0.5 * $user-activity-panel-width;
+$orb-card-shadow-position:  ($orb-card-margin-left - (0.107 * $orb-card-width)) ($orb-card-height - rem-calc(4px) );
+$orb-card-shadow-size: $orb-card-width * 1.2 rem-calc(25px) ; // ie. 10% width of orbcard in both directions;
+$orb-card-row-height:rem-calc(85px);
+$orb-card-button-width:$orb-card-row-height;
+$orb-card-button-height:$orb-card-row-height;
+$orb-card-content-width: $orb-card-inner-width - $orb-card-button-width - $float-pane-margin; // float-pane-margin is used as button/content separation width
