--- a/webroot/scss/templates/menu.scss
+++ b/webroot/scss/templates/menu.scss
@@ -1,157 +1,269 @@
+html, nav, body, main, footer {
+  overflow:none;
+}
 body#menu {
-  background-image : url("../img/menu_bg.xlg.jpg");
+  background-image : url("../img/menu_bg.xlg.bright.jpg");
+  background-attachment: fixed;
+  overflow: none;
   // todo: media queries for smaller resolutions
 }
-
-li.orbcat {
-  background-repeat:no-repeat;
-  background-position:center;
-  background-size: 60px 60px;
-  &.xtreme-original-pizzas { background-image:url("../img/orbcat_icons/xtreme-original-pizzas.png");}
-  &.xtreme-super-pizzas { background-image:url("../img/orbcat_icons/xtreme-super-pizzas.png");}
-  &.specialty-pizzas { background-image:url("../img/orbcat_icons/specialty-pizzas.png");}
-  &.panzarottis { background-image:url("../img/orbcat_icons/panzarottis.png");}
-  &.assorted-fingers { background-image:url("../img/orbcat_icons/assorted-fingers.png");}
-  &.poutines { background-image:url("../img/orbcat_icons/poutines.png");}
-  &.donairs { background-image:url("../img/orbcat_icons/donairs.png");}
-  &.chicken-and-chips { background-image:url("../img/orbcat_icons/chicken-and-chips.png");}
-  &.fish-and-chips { background-image:url("../img/orbcat_icons/fish-and-chips.png");}
-  &.pasta { background-image:url("../img/orbcat_icons/pasta.png");}
-  &.burgers { background-image:url("../img/orbcat_icons/burgers.png");}
-  &.sandwiches { background-image:url("../img/orbcat_icons/sandwiches.png");}
-  &.pita-wraps { background-image:url("../img/orbcat_icons/pita-wraps.png");}
-  &.subs { background-image:url("../img/orbcat_icons/subs.png");}
-  &.xtreme-subs { background-image:url("../img/orbcat_icons/xtreme-subs.png");}
-  &.beverages { background-image:url("../img/orbcat_icons/beverages.png");}
-  &.salads { background-image:url("../img/orbcat_icons/salads.png");}
-  &.desserts { background-image:url("../img/orbcat_icons/desserts.png");}
-}
-
 main#menu {
-  margin-top : $topbar-height;
-}
+  position: fixed;
+  width:100%;
+  top:0;
+  left:0;
+  margin-top :$topnav-height + $float-pane-margin;
+  overflow:none;
+} // in use; content area
 
-#user-activity-panel-wrapper {
-  margin : 0 10 0 0;
-  width  : rem-calc(100);
-}
+/**************************************************************
 
-#user-activity-panel {
-  margin-left : 0;
+                        USER ACTIVITY PANEL
+
+***************************************************************/
+ul#user-activity-panel {
+  position:relative;
+  float:left;
+//  display:inline-block !important;
+  margin : -1*$float-pane-margin $float-pane-margin 0px 0px;
+  width  : $user-activity-panel-width;
+  vertical-align: top;
   li {
     @include global-transition(background-color);
+    a { @include global-transition(color);}
     width            : $user-activity-panel-width;
     height           : $user-activity-panel-height;
     background-color : $black-a25;
     border           : 1px solid $black;
     border-top       : none;
-    &:hover { background-color: $white-a16;}
+    &:hover { background-color : $white-a16; }
     &:first-of-type {
-      transition: none;
+      transition       : none;
       background-color : $dark-grey;
+      border-top: 1px solid $dark-grey;
     }
     &.active {
-      background-color:$white;
+      background-color : $white-a75;
+      a {
+        color: $dark-grey;}
     }
   }
 }
 
-div#category-nav-wrapper {
-  position : relative;
-  margin   : rem-calc(20);
+
+
+/**************************************************************
+
+                        ORBCAT MENU
+
+***************************************************************/
+ul#orbcat-menu {
+  position   : relative;
+  width      : $orbcat-menu-width;
+  height     :  $orbcat-menu-height;
+  display:inline-block;
+  margin:0;
+  @include orbcat-menu-gradient;
 }
 
+li.orbcat {
+  display        : inline-block;
+  height         : $orbcat-menu-item-height;
+  cursor: pointer;
+  background-repeat   : no-repeat;
+  background-position : center rem-calc(5px);
+  background-size     : 60px 60px;
+  box-sizing:border-box;
+  &.xtreme-original-pizzas { background-image : url("../img/orbcat_icons/xtreme-original-pizzas.png"); }
+  &.xtreme-super-pizzas { background-image : url("../img/orbcat_icons/xtreme-super-pizzas.png"); }
+  &.specialty-pizzas { background-image : url("../img/orbcat_icons/specialty-pizzas.png"); }
+  &.panzarottis { background-image : url("../img/orbcat_icons/panzarottis.png"); }
+  &.assorted-fingers { background-image : url("../img/orbcat_icons/assorted-fingers.png"); }
+  &.poutines { background-image : url("../img/orbcat_icons/poutines.png"); }
+  &.donairs { background-image : url("../img/orbcat_icons/donairs.png"); }
+  &.chicken-and-chips { background-image : url("../img/orbcat_icons/chicken-and-chips.png"); }
+  &.fish-and-chips { background-image : url("../img/orbcat_icons/fish-and-chips.png"); }
+  &.pasta { background-image : url("../img/orbcat_icons/pasta.png"); }
+  &.burgers { background-image : url("../img/orbcat_icons/burgers.png"); }
+  &.sandwiches { background-image : url("../img/orbcat_icons/sandwiches.png"); }
+  &.pita-wraps { background-image : url("../img/orbcat_icons/pita-wraps.png"); }
+  &.subs { background-image : url("../img/orbcat_icons/subs.png"); }
+  &.xtreme-subs { background-image : url("../img/orbcat_icons/xtreme-subs.png"); }
+  &.beverages { background-image : url("../img/orbcat_icons/beverages.png"); }
+  &.salads { background-image : url("../img/orbcat_icons/salads.png"); }
+  &.desserts { background-image : url("../img/orbcat_icons/desserts.png"); }
+  a {
+    height      : rem-calc(30);
+    margin-top  : rem-calc(110);
+  }
+}
+
+
 #orbcat-menu-title {
+  width:100%;
+  h1 { padding:0; margin:0}
+  padding:0;
   position       : absolute;
   bottom         : 0;
   left           : rem-calc(10);
-  margin         : 0 0 rem-calc(-25) 0;
-  letter-spacing : rem-calc(-3);
-  font-size      : rem-calc(60);
-  @include HelveticaBlkCn;
-  color          : $white;
+  margin         : 0 0 $orbcat-menu-title-font-size/-2 0;
 }
 
-ul#category-nav {
-  width      : rem-calc(850);
-  position   : relative;
-  background : #ac0819; /* Old browsers */
-  background : -moz-linear-gradient(left, #ac0819 0%, #800613 100%); /* FF3.6+ */
-  background : -webkit-gradient(linear, left top, right top, color-stop(0%, #ac0819), color-stop(100%, #800613)); /* Chrome,Safari4+ */
-  background : -webkit-linear-gradient(left, #ac0819 0%, #800613 100%); /* Chrome10+,Safari5.1+ */
-  background : -o-linear-gradient(left, #ac0819 0%, #800613 100%); /* Opera 11.10+ */
-  background : -ms-linear-gradient(left, #ac0819 0%, #800613 100%); /* IE10+ */
-  background : linear-gradient(to right, #ac0819 0%, #800613 100%); /* W3C */
-  filter     : progid:DXImageTransform.Microsoft.gradient(startColorstr='#ac0819', endColorstr='#800613', GradientType=1); /* IE6-9 */
-  padding    : 4px;
-  height     : rem-calc(380);
 
-  li {
-    display             : inline-block;
-    padding             : 0 4px;
-    height              : rem-calc(115);
-    text-align          : center;
-    vertical-align      : text-bottom;
-    a {
-      width       : 100%;
-      color       : $white;
-      font-size   : rem-calc(14px);
-      height      : rem-calc(30);
-      line-height : rem-calc(36);
-      margin-top  : rem-calc(110);
-      @include HelveticaMdCn;
-    }
-  }
-}
+/**************************************************************
 
+                       ORB LIST / ORB CARD STAGE / ORB CARD
+
+***************************************************************/
 #orb-card-wrapper {
   position : relative;
   height   : rem-calc(375);
+  width: $orb-card-wrapper-width; // active orbs floats right (ie. this - orbcard stage = visible space for active orbs)
+  margin-top:$float-pane-margin;
 }
 
 #orb-card-stage {
   position                   : absolute;
-  left                       : 0;
-  top                        : 0;
-  width                      : rem-calc(1000);
+  left                       : -1 * $float-pane-border-width;
+  top                        : -0.9 * $float-pane-border-width;
+  width                      : $orb-card-stage-width;
   border                     : 6px solid $white;
   border-top-right-radius    : 1000px;
   border-bottom-right-radius : 1000px;
-  float                      : left;
-  height                     : rem-calc(360);
-  background                 : #f5f5f5; /* Old browsers */
-  background                 : -moz-linear-gradient(45deg, #f5f5f5 0%, #969696 100%); /* FF3.6+ */
-  background                 : -webkit-gradient(linear, left bottom, right top, color-stop(0%, #f5f5f5), color-stop(100%, #969696)); /* Chrome,Safari4+ */
-  background                 : -webkit-linear-gradient(45deg, #f5f5f5 0%, #969696 100%); /* Chrome10+,Safari5.1+ */
-  background                 : -o-linear-gradient(45deg, #f5f5f5 0%, #969696 100%); /* Opera 11.10+ */
-  background                 : -ms-linear-gradient(45deg, #f5f5f5 0%, #969696 100%); /* IE10+ */
-  background                 : linear-gradient(45deg, #f5f5f5 0%, #969696 100%); /* W3C */
-  filter                     : progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#969696', GradientType=1); /* IE6-9 fallback on horizontal gradient */
+  height                     : rem-calc(375);
+//  @include orb-card-gradient; todo: make this a picture or add a wrapper for the other bg
+  background-color:rgb(215,215,215);
+  background-image: url("../img/orb_card.shadow.png");
+  background-repeat: no-repeat;
+  background-position: $orb-card-shadow-position;
+  background-size: $orb-card-shadow-size;
 }
+
 div.orb-card {
-  position:relative;
-  height:$orb-card-height;
-  width: $orb-card-width;
-  margin-left:rem-calc(60px);
-  margin-top:rem-calc(15px);
-  background-color:$white;
-  padding:rem-calc(10px);
-  z-index:99999;
+  position         : relative;
+  height           : $orb-card-height;
+  width            : $orb-card-width;
+  margin-left      : $orb-card-margin-left; // just offset it a little for aesthetics
+  margin-top       : $float-pane-margin;
+  background-color : $white;
+  padding          : $orb-card-padding;
+  z-index          : 99999;
 }
-ul.orb-card-buttons {
-  margin:0;
-  li {
-    width: rem-calc(85px);
-    height: rem-calc(85px);
-    margin-bottom: rem-calc(21px);
-    &:last-of-type { margin-bottom: none;}
-    &#favorite { background-color:$xtreme-yellow;}
-    &#order { background-color:$xtreme-red;}
-    &#share { background-color:$xtreme-blue;}
+
+.triangle-down {
+  position     : absolute;
+  bottom       : -12px;
+  left         : 30px;
+  width        : 0;
+  height       : 0;
+  border-left  : 12px solid transparent;
+  border-right : 12px solid transparent;
+}
+
+.triangle-right {
+  position      : absolute;
+  left          : 85px;
+  top           : 30px;
+  width         : 0;
+  height        : 0;
+  border-top    : 12px solid transparent;
+  border-bottom : 12px solid transparent;
+}
+
+ul.orb-card {
+  position:relative;
+  width          : 100%;
+  li.orb-card-row {
+    height: $orb-card-row-height;
+    margin-bottom : $float-pane-margin;
+    div.orb-card-content, div.orb-card-button { display:inline-block;}
+//    background-color:rgb(240,240,240);
+  }
+  div.orb-card-button {
+    position: relative;
+    vertical-align: top;
+    width               : $orb-card-button-width;
+    height              : $orb-card-button-height;
+    background-repeat   : no-repeat;
+    background-position : center;
+    cursor:pointer;
+    &#favorite {
+      background-color : $xtreme-yellow;
+      background-image : url('../img/orb_card.icon.fav.png');
+      .triangle-down {border-top : 16px solid $xtreme-yellow;}
+    }
+    &#order {
+      background-color : $xtreme-red;
+      background-image : url('../img/orb_card.icon.cart.png');
+      .triangle-down {border-top : 16px solid $xtreme-red;}
+    }
+    &#like {
+      background-color : $xtreme-blue;
+      background-image : url('../img/orb_card.icon.like.png');
+      .triangle-right {border-left : 16px solid $xtreme-blue;}
+    }
+    @include global-transition(background-color);
+    .triangle-down {@include global-transition(border-top);}
+    &#favorite:hover, &#order:hover, &#like:hover {
+      background-color:$light-grey;
+      .triangle-right {border-left: 16px solid $light-grey;}
+      .triangle-down {border-top: 16px solid $light-grey;}
+    }
   }
 }
 
-#orbcat-list {
+div.orb-card-content {
+  width : $orb-card-content-width;
+  margin-left:$float-pane-margin;
+  position: relative;
+  height: $orb-card-row-height;
+
+
+  &#description {
+    background-color : $light-grey;
+    //height           : $orb-card-row-height;
+    padding          : rem-calc(10px);
+  }
+  &#price-matrix {
+    //max-height: $orb-card-row-height;
+    ul {
+      margin-top:-5px;
+      padding:0;
+      max-height:58px;
+      overflow-y: auto;
+      &::-webkit-scrollbar-track
+      {
+      	box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+        border-radius: 4px;
+      	background-color: $white;
+      }
+      &::-webkit-scrollbar
+      {
+
+      	width: 10px;
+      	background-color: $white;
+      }
+      &::-webkit-scrollbar-thumb
+      {
+        border-radius: 4px;
+      	background-color: $xtreme-blue;
+      }
+    }
+    h4, li div {
+      width : 50%;
+      padding:0;
+      margin:0;
+      display:inline-block;
+      &:last-of-type { padding-right:rem-calc(15px);}
+    }
+    &#orb-card-options {
+      background-color:$text-grey;
+    }
+  }
+
+}
+
+#active-orbs-menu {
   position   : absolute;
   right      : 0;
   top        : 0;
@@ -161,41 +273,42 @@ ul.orb-card-buttons {
   overflow-y : scroll;
   overflow-x : hidden;
   li {
+    position         : relative;
     padding-left     : 200px;
     background-color : $xtreme-blue;
     box-shadow       : inset 15px -5px 8px $black-a33;
     font-size        : rem-calc(18);
     height           : rem-calc(60);
     line-height      : rem-calc(60);
+    cursor: pointer;
+    @include global-transition(background-color);
     @include HelveticaBlkCn;
     a { color : $white; }
+    &:hover { background-color : lighten($xtreme-blue, 15%); }
     &:first-of-type {
-      box-shadow:none;
-      background-color:$xtreme-red;
-      font-size:rem-calc(36);
+      padding-top:10px;
+      box-shadow       : none;
+      background-color : $xtreme-red;
+      font-size        : rem-calc(36);
+      transition       : none;
+      cursor: default;
     }
-    &:nth-of-type(3) {
-      background-color : $xtreme-orange;
+    &.active {
+      background-color : $xtreme-yellow;
+      a {
+        color:$dark-grey;
+        cursor: default;
+      }
+      transition       : none;
+      cursor: default;
     }
   }
 }
 
-
-.orbcat-triangle-outer {
-  position: absolute;
-//  transform: translateY(50%);
-  left:75%;
-	width: 0;
-	height: 0;
-	border-left: 20px solid transparent;
-	border-right: 20px solid transparent;
-	border-top: 40px solid $white;
-}
-
 .orbcat-triangle-inner {
-      width: 0;
-      height: 0;
-      border-left: 22px solid transparent;
-      border-right: 22px solid transparent;
-      border-top: 26px solid $xtreme-red;
+  width        : 0;
+  height       : 0;
+  border-left  : 22px solid transparent;
+  border-right : 22px solid transparent;
+  border-top   : 26px solid $xtreme-red;
 }
