--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -3,6 +3,7 @@ $dark-grey: rgb(25,25,25);
 $text-grey: rgb(55,55,55);
 $medium-grey: rgb(160,160,160);
 $light-grey: rgb(180,180,180);
+$very-light-grey: rgb(225,225,225);
 $ultra-light-grey: rgb(245,245,245);
 $black: rgba(0,0,0,1);
 $black-a75: rgba(0,0,0,.75);
